--- a/cluster/bootstrap/openebs.yaml
+++ b/cluster/bootstrap/openebs.yaml
@@ -19,9 +19,7 @@ spec:
             mayastor:
               enabled: false
         loki:
-          replicas: 1
-        minio:
-          replicas: 1
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: openebs
@@ -46,3 +44,6 @@ parameters:
   storage: "lvm"
   volgroup: "lvmvg"
 provisioner: local.csi.openebs.io
+volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
+reclaimPolicy: Retain
