--- a/cluster/argocd/vault-argocd/config.yaml
+++ b/cluster/argocd/vault-argocd/config.yaml
@@ -3,10 +3,9 @@ kind: ConfigMap
 metadata:
   name: argocd-cm
 data:
-  resource.exclusions: |
-    - apiGroups:
-      - cilium.io
-      kinds:
-      - CiliumIdentity
-      clusters:
-      - "*"
+  admin.enabled: "true"
+  application.instanceLabelKey: argocd.argoproj.io/instance
+  exec.enabled: "false"
+  statusbadge.enabled: "false"
+  timeout.hard.reconciliation: "0s"
+  timeout.reconciliation: "180s"
