--- a/cluster/bootstrap/kustomization.yaml
+++ b/cluster/bootstrap/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../argocd
+  - ../argocd/vault-argocd
   - cert-manager.yaml
   - vault.yaml
   - as-app.yml
