--- a/cluster/system/monitoring/grafana.yaml
+++ b/cluster/system/monitoring/grafana.yaml
@@ -48,7 +48,18 @@ spec:
               type: prometheus
               url: http://prometheus-stack-kube-prom-prometheus:9090
               access: proxy
+              isDefault: true
+            - name: Loki
+              type: loki
+              url: http://loki:3100
+              access: proxy
               isDefault: false
         sidecar:
+          dashboards:
+            enabled: true
+            label: grafana_dashboard
+            labelValue: "1"
+            folderAnnotation: grafana_folder
+            searchNamespace: ALL
           datasources:
             enabled: true
