--- a/cluster/bootstrap/cert-manager.yaml
+++ b/cluster/bootstrap/cert-manager.yaml
@@ -13,6 +13,8 @@ spec:
       values: |
         crds:
           enabled: true
+        dns01RecursiveNameservers: "1.1.1.1:53,8.8.8.8:53"
+        dns01RecursiveNameserversOnly: true
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
