--- a/cluster/system/monitoring/prometheus.yaml
+++ b/cluster/system/monitoring/prometheus.yaml
@@ -62,3 +62,59 @@ spec:
           enabled: true
         grafana:
           enabled: false
+        additionalPrometheusRulesMap:
+          openebs-pvc-alerts:
+            groups:
+              - name: openebs.pvc
+                rules:
+                  - alert: PVCNearlyFull
+                    expr: |
+                      (
+                        kubelet_volume_stats_available_bytes
+                        / kubelet_volume_stats_capacity_bytes
+                      ) < 0.15
+                    for: 5m
+                    labels:
+                      severity: warning
+                    annotations:
+                      summary: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in
+                        {{ $labels.namespace }} is over 85% full
+                      description: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in namespace
+                        {{ $labels.namespace }} has less than 15% capacity remaining.
+                        Current available: {{ $value | humanizePercentage }}.
+                  - alert: PVCCriticallyFull
+                    expr: |
+                      (
+                        kubelet_volume_stats_available_bytes
+                        / kubelet_volume_stats_capacity_bytes
+                      ) < 0.05
+                    for: 2m
+                    labels:
+                      severity: critical
+                    annotations:
+                      summary: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in
+                        {{ $labels.namespace }} is over 95% full
+                      description: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in namespace
+                        {{ $labels.namespace }} has less than 5% capacity remaining.
+                        Current available: {{ $value | humanizePercentage }}.
+                        Immediate action required.
+                  - alert: PVCInodesCritical
+                    expr: |
+                      (
+                        kubelet_volume_stats_inodes_free
+                        / kubelet_volume_stats_inodes
+                      ) < 0.05
+                    for: 5m
+                    labels:
+                      severity: warning
+                    annotations:
+                      summary: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in
+                        {{ $labels.namespace }} is running out of inodes
+                      description: >-
+                        PVC {{ $labels.persistentvolumeclaim }} in namespace
+                        {{ $labels.namespace }} has less than 5% inodes remaining.
